Allows to disable timeseries last time updating, avoiding calls to unuseful stored procedure for better performances
For example: on recovery data, when it is known that there not will be updates on last_time

Notes:
- some bug were fixed
- Changed also 'update_first_time' route into 'update_time_range' to cover also the update of first_time and last_time together (useful to update timeseries stats after a recovery session)
